Создание секции с обратной связью и анимированного аккордеона

--- a/index.html
+++ b/index.html
@@ -461,17 +461,63 @@
             </div>
         </section>
         <section class="feedback">
-            <div class="container container_sm">
-                <div class="wrap-feedback">
-                    <div class="wrap-feedback__content">
-                        <h2 class="wrap-feedback__title">Есть вопросы по графику или работе нашей компании?</h2>
-                        <h2 class="wrap-feedback__title wrap-feedback__title-2">Не знаете, какая техника вам подойдет?</h2>
-                        <p class="wrap-feedback__text">Тогда вы можете оставить ваши контакты на сайте,  мы свяжемся с вами в ближайшее время и решим все проблемы</p>
-                        <p class="wrap-feedback__text">Ответим на любые вопросы</p>
-                        <button class="btn-request wrap-feedback__btn">Связаться с нами</button>
+            <div class="container">
+                <div class="feedback-grid">
+                    <div class="wrap-feedback">
+                        <div class="wrap-feedback__content">
+                            <h2 class="wrap-feedback__title">Есть вопросы по графику или работе нашей компании?</h2>
+                            <h2 class="wrap-feedback__title wrap-feedback__title-2">Не знаете, какая техника вам подойдет?</h2>
+                            <p class="wrap-feedback__text">Тогда вы можете оставить ваши контакты на сайте,  мы свяжемся с вами в ближайшее время и решим все проблемы</p>
+                            <p class="wrap-feedback__text">Ответим на любые вопросы</p>
+                            <button class="btn-request wrap-feedback__btn">Связаться с нами</button>
+                        </div>
+                        <div class="wrap-feedback__img">
+                            <img src="img/img-feedback.jpg">
+                        </div>
                     </div>
-                    <div class="wrap-feedback__img">
-                        <img src="img/img-feedback.jpg">
+                    <div class="accordion">
+                        <div class="accordion__item">
+                            <div class="accordion__head">
+                                <h3 class="accordion__title">Есть ли у вас скидки?</h3>
+                                <div class="accordion__icon"></div>
+                            </div>
+                            <div class="accordion__body">
+                                <div class="accordion__auto-height">
+                                    <div class="accordion__wrapper">
+                                        <p>В нашей компании предусмотрены скидки для разных категорий клиентов: новые клиенты могут воспользоваться скидкой 40% на доставку техники до места работ, а постоянные клиенты пользуются преимуществом накопительной скидки, что подчеркивает наше стремление к долгосрочному сотрудничеству и выражает благодарность за лояльность.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion__item">
+                            <div class="accordion__head">
+                                <h3 class="accordion__title">Можно ли взять спецтехнику в аренду без экипажа?</h3>
+                                <div class="accordion__icon"></div>
+                            </div>
+                            <div class="accordion__body">
+                                <div class="accordion__auto-height">
+                                    <div class="accordion__wrapper">
+                                        <p>Аренда спецтехники в нашей компании возможна только вместе с квалифицированным экипажем, чтобы гарантировать безопасность, правильную эксплуатацию оборудования и эффективность выполнения работ.</p>
+                                        <p>Это обеспечивает соблюдение стандартов безопасности и сохранность дорогостоящей техники, а также позволяет клиентам получить наилучший результат в короткие сроки.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion__item">
+                            <div class="accordion__head">
+                                <h3 class="accordion__title">За какое минимальное время нужно заказывать технику?</h3>
+                                <div class="accordion__icon"></div>
+                            </div>
+                            <div class="accordion__body">
+                                <div class="accordion__auto-height">
+                                    <div class="accordion__wrapper">
+                                        <p>Минимальное время для предварительного заказа техники в нашей компании зависит от текущей загруженности и доступности оборудования.</p>
+                                        <p>Рекомендуется осуществлять заказ как минимум за один рабочий день до начала планируемых работ, чтобы обеспечить гарантированную доступность техники и её доставку в назначенное время и место.</p>
+                                        <p>Это поможет избежать задержек и убедиться в том, что все необходимые ресурсы будут предоставлены точно в срок.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -481,4 +527,5 @@
     <script src="script/headerSlider.js"></script>
     <script src="script/serviceLine.js"></script>
     <script src="script/planArrows.js"></script>
+    <script src="script/accordion.js"></script>
 </body>
