Создание подвала сайта

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a class="nav__brand" href="#"><span class="nav__brand-half-1">Kolyan</span><span class="nav__brand-half-2">Kovsh</span></a>
+                <a class="brand nav__brand" href="#"><span class="brand-left">Kolyan</span><span class="brand-right">Kovsh</span></a>
                 <div class="nav__navigation">
                     <ul class="nav__list">
                         <li class="nav__item">
@@ -523,6 +523,38 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-grid__brand">
+                    <a class="brand nav__brand" href="#"><span class="brand-left">Kolyan</span><span class="brand-right">Kovsh</span></a>
+                    <h4>ИП Авсянкин Николай Владимирович</h4>
+                </div>
+                <div class="footer-grid__contacts">
+                    <p class="footer-grid-contact-title">Телефон:</p>
+                    <a href="tel:+375298744133" class="footer-grid__number">+375298744133</a>
+                    <p class="footer-grid-contact-title">Почта:</p>
+                    <a href="mailto:kolyankovsh@mail.ru" class="footer-grid__email">kolyankovsh@mail.ru</a>
+                </div>
+                <nav class="footer-grid__navigation">
+                    <ul class="footer-grid__list">
+                        <li class="footer-grid__item">
+                            <a href="#" class="footer-grid__link">Оборудование</a>
+                        </li>
+                        <li class="footer-grid__item">
+                            <a href="#" class="footer-grid__link">Услуги</a>
+                        </li>
+                        <li class="footer-grid__item">
+                            <a href="#" class="footer-grid__link">Наши работы</a>
+                        </li>
+                        <li class="footer-grid__item">
+                            <a href="#" class="footer-grid__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/headerSlider.js"></script>
     <script src="script/serviceLine.js"></script>
