--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             </div>
         </div>
         <div class="popup__body popup__body-next">
+            <p class="popup__body__text">Введите ваш телефон и мы свяжемся с вами в ближайшее время</p>
             <div class="popup__input-wrapper">
                 <input class="popup__input" type="text" required id="popup-input-name">
                 <label class="popup__input-label" for="popup-input-name">Ваше имя</label>
@@ -125,6 +126,50 @@
             <div class="popup__btn-wrapper">
                 <button class="btn-request popup__btn popup__btn-slide" type="button">Следующий шаг</button>
             </div>
+        </div>
+    </form>
+    <form class="popup" id="btn-request-tel">
+        <header class="popup__head">
+            <h3 class="popup__title-head">Обратная связь (по телефону)</h3>
+            <div class="popup__btn-close"></div>
+        </header>
+        <div class="popup__body popup__body-next popup__body popup__body-next_display">
+            <p class="popup__body__text">Введите ваш телефон и мы свяжемся с вами в ближайшее время</p>
+            <div class="popup__input-wrapper">
+                <input class="popup__input" type="text" required id="popup-input-name">
+                <label class="popup__input-label" for="popup-input-name">Ваше имя</label>
+            </div>
+            <div class="popup__input-wrapper">
+                <input class="popup__input" type="text" required id="popup-input-number">
+                <label class="popup__input-label" for="popup-input-number">Ваш номер телефона</label>
+            </div>
+            <div class="popup__textarrea-wrapper">
+                <textarea class="popup__textarrea" required></textarea>
+                <label class="popup__textarrea-label" for="popup-input-number">Задайте вопрос (необязательно)</label>
+            </div>
+            <button class="btn-request popup__btn popup__btn_mt" type="submit">Отправить</button>
+        </div>
+    </form>
+    <form class="popup" id="btn-request-email">
+        <header class="popup__head">
+            <h3 class="popup__title-head">Обратная связь (через почту)</h3>
+            <div class="popup__btn-close"></div>
+        </header>
+        <div class="popup__body popup__body-next popup__body popup__body-next_display">
+            <p class="popup__body__text">Введите вашу почту и мы свяжемся с вами в ближайшее время</p>
+            <div class="popup__input-wrapper">
+                <input class="popup__input" type="text" required id="popup-input-name">
+                <label class="popup__input-label" for="popup-input-name">Ваше имя</label>
+            </div>
+            <div class="popup__input-wrapper">
+                <input class="popup__input" type="text" required id="popup-input-number">
+                <label class="popup__input-label" for="popup-input-number">Ваша почта</label>
+            </div>
+            <div class="popup__textarrea-wrapper">
+                <textarea class="popup__textarrea" required></textarea>
+                <label class="popup__textarrea-label" for="popup-input-number">Задайте вопрос (необязательно)</label>
+            </div>
+            <button class="btn-request popup__btn popup__btn_mt" type="submit">Отправить</button>
         </div>
     </form>
     <header class="header">
@@ -148,13 +193,13 @@
                     </ul>
                 </div>
                 <div class="nav__contacts">
-                    <div class="nav__contact nav__contact-1">
+                    <div class="nav__contact nav__contact-1 btn-popup" data-request="#btn-request-tel">
                         <div class="nav__icon-contact nav__icon-contact-1">
                             
                         </div>
                         <p class="nav__text-contact">Телефон</p>
                     </div>
-                    <div class="nav__contact nav__contact-2">
+                    <div class="nav__contact nav__contact-2 btn-popup" data-request="#btn-request-email">
                         <div class="nav__icon-contact">
                             
                         </div>
@@ -245,7 +290,7 @@
                             <p class="car-list__type">Экскаваторная техника</p>
                             <h2 class="car-list__title">Полноповоротный колёсный экскаватор DOOSAN DX210W</h2>
                             <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -257,7 +302,7 @@
                             <p class="car-list__type">Экскаваторная техника</p>
                             <h2 class="car-list__title">Экскаватор-погрузчик 4CX и JCB 5CX</h2>
                             <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -269,7 +314,7 @@
                             <p class="car-list__type">Экскаваторная техника</p>
                             <h2 class="car-list__title">Мини-экскаватор JCB 8030 ZTS</h2>
                             <p class="car-list__text">Рытье траншей, котлована, работа с гидробуром</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -281,7 +326,7 @@
                             <p class="car-list__type">Автосамосвал</p>
                             <h2 class="car-list__title">Самосвал МАЗ</h2>
                             <p class="car-list__text">Перевозка навалочных и сыпных грузов</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -293,7 +338,7 @@
                             <p class="car-list__type">Виброкатки</p>
                             <h2 class="car-list__title">Виброкаток Changlin</h2>
                             <p class="car-list__text">Утрамбовка определенных отсыпанных слоев грунта</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -305,7 +350,7 @@
                             <p class="car-list__type">Прицепная техника</p>
                             <h2 class="car-list__title">Трал для перевозки спецтехники</h2>
                             <p class="car-list__text">Перевозка строительной техники</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                 </ul>
@@ -324,7 +369,7 @@
                             <p class="car-list__type">Строительное оборудование</p>
                             <h2 class="car-list__title">Гидробур</h2>
                             <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -336,7 +381,7 @@
                             <p class="car-list__type">Строительное оборудование</p>
                             <h2 class="car-list__title">Гидромолот</h2>
                             <p class="car-list__text">Рытье траншей, котлована, планировка участка, перемещение грузов</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                     <li class="car-list__item">
@@ -348,7 +393,7 @@
                             <p class="car-list__type">Строительное оборудование</p>
                             <h2 class="car-list__title">Сменные ковши под разные задачи</h2>
                             <p class="car-list__text">СМЕННЫЕ КОВШИ ПОД РАЗНЫЕ ЗАДАЧИ</p>
-                            <button class="btn-request car-list__btn">Оставить заявку</button>
+                            <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                         </div>
                     </li>
                 </ul>
@@ -373,6 +418,7 @@
                         <p class="service-grid__text">Мы предлагаем нашу помощь в этом сложном задании, предоставляя услуги по вывозу мусора с использованием собственной спецтехники.</p>
                         <p class="service-grid__text">Обратившись к нам за услугами по вывозу строительного мусора, вы получаете комплексное решение по выгодной цене и в удобное для вас время.</p>
                         <p class="service-grid__text">Сотрудничая с нами, вы можете быть уверены в высоком качестве выполненной работы, при этом экономя время и средства</p>
+                        <button class="btn-request btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                     </article>
                     <div class="service-grid__path">
                         <div class="service-grid__circle service-grid__circle-2"></div>
@@ -388,6 +434,7 @@
                         <p class="service-grid__text">Мы обеспечиваем быструю доставку песка любых объемов, от малых до крупных партий.</p>
                         <p class="service-grid__text">Доставка песка от нашей компании — это удобная и надежная услуга для строительных и ландшафтных проектов.</p>
                         <p class="service-grid__text">Современная техника для загрузки и транспортировки гарантирует эффективность и безопасность поставок, а гибкое расписание доставок позволяет клиентам точно планировать свои работы.</p>
+                        <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                     </article>
                     <div class="service-grid__path">
                         <div class="service-grid__circle service-grid__circle-3"></div>
@@ -407,6 +454,7 @@
                         <p class="service-grid__text">Доставка и вывоз грунта от нашей компании — это комплексная услуга, предназначенная для облегчения строительных и земляных работ.</p>
                         <p class="service-grid__text">Мы предоставляем транспортировку различных типов грунта, от плодородного слоя до строительного, а также вывозим излишки грунта с объектов строительства и ландшафтного дизайна.</p>
                         <p class="service-grid__text">Наша техника, включая специализированные самосвалы, обеспечивает эффективную загрузку и транспортировку, гарантируя своевременное выполнение работ с учетом индивидуальных требований каждого проекта.</p>
+                        <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                     </article>
                     <div class="service-grid__path">
                         <div class="service-grid__circle service-grid__circle-4"></div>
@@ -422,6 +470,7 @@
                         <p class="service-grid__text">Прокладка водопровода и канализации — это одна из ключевых услуг нашей компании, предназначенная для создания надежных и эффективных систем водоснабжения и канализации.</p>
                         <p class="service-grid__text">Мы используем современное оборудование и технику для выполнения земляных работ, обеспечивая точную и аккуратную прокладку труб.</p>
                         <p class="service-grid__text">Мы гарантируем качество выполнения работ, соблюдение всех технических норм и стандартов, а также предоставляем гарантию на выполненные работы.</p>
+                        <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                     </article>
                     <div class="service-grid__path">
                         <div class="service-grid__circle service-grid__circle-5"></div>
@@ -437,6 +486,7 @@
                         <p class="service-grid__text">Наши услуги по копке озер и созданию водоемов предлагают всестороннее решение для реализации проектов водоемов любого размера и назначения.</p>
                         <p class="service-grid__text">Мы обеспечиваем полный цикл работ — от первоначальной консультации до окончательного формирования водоема, используя современное оборудование и опыт команды.</p>
                         <p class="service-grid__text">Наши специалисты помогут вам создать как небольшие декоративные пруды, так и крупные озера, при этом соблюдая экологические нормы и стандарты безопасности, чтобы обеспечить долговечность и красоту ваших водоемов.</p>
+                        <button class="btn-request car-list__btn btn-popup" data-request="#btn-request-main">Оставить заявку</button>
                     </article>
                     <div class="service-grid__path">
                         <div class="service-grid__circle service-grid__circle-6"></div>
@@ -588,7 +638,7 @@
                             <h2 class="wrap-feedback__title wrap-feedback__title-2">Не знаете, какая техника вам подойдет?</h2>
                             <p class="wrap-feedback__text">Тогда вы можете оставить ваши контакты на сайте,  мы свяжемся с вами в ближайшее время и решим все проблемы</p>
                             <p class="wrap-feedback__text">Ответим на любые вопросы</p>
-                            <button class="btn-request wrap-feedback__btn">Связаться с нами</button>
+                            <button class="btn-request wrap-feedback__btn btn-popup" data-request="#btn-request-tel">Связаться с нами</button>
                         </div>
                         <div class="wrap-feedback__img">
                             <img src="img/img-feedback.jpg">
