--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="overblock"></div>
-    <form class="popup" id="btn-request-main">
+    <form class="popup" id="btn-request-main" novalidate>
         <header class="popup__head">
             <h3 class="popup__title-head">Обратная связь</h3>
             <div class="popup__btn-close"></div>
@@ -19,8 +19,8 @@
                 <h4 class="popup__subtitle">Выберите вид техники:</h4>
                 <section class="popup__radio-content">
                     <div class="popup__radio-wrapper">
-                        <div class="popup__radio-div">
-                            <input class="popup__radio" type="radio" name="popup-radio-1" id="radio-1-1">
+                        <div class="popup__radio-div popup__radio-div_act">
+                            <input class="popup__radio" type="radio" name="popup-radio-1" id="radio-1-1" checked>
                         </div>
                         <label for="radio-1-1" class="popup__label">Полноповоротный колёсный экскаватор DOOSAN DX210W</label>
                     </div>
@@ -64,8 +64,8 @@
                 <h4 class="popup__subtitle">Выберите вид услуги:</h4>
                 <section class="popup__radio-content">
                     <div class="popup__radio-wrapper">
-                        <div class="popup__radio-div">
-                            <input class="popup__radio" type="radio" name="popup-radio-2" id="radio-2-1">
+                        <div class="popup__radio-div popup__radio-div_act">
+                            <input class="popup__radio" type="radio" name="popup-radio-2" id="radio-2-1" checked>
                         </div>
                         <label for="radio-2-1" class="popup__label">Вывоз строительного мусора</label>
                     </div>
@@ -110,7 +110,7 @@
             <p class="popup__body__text">Введите ваш телефон и мы свяжемся с вами в ближайшее время</p>
             <div class="popup__input-wrapper">
                 <input class="popup__input" type="text" required id="popup-input-name">
-                <label class="popup__input-label" for="popup-input-name">Ваше имя</label>
+                <label class="popup__input-label text-validation" for="popup-input-name">Ваше имя</label>
             </div>
             <div class="popup__input-wrapper">
                 <input class="popup__input" type="text" required id="popup-input-number">
@@ -128,7 +128,7 @@
             </div>
         </div>
     </form>
-    <form class="popup" id="btn-request-tel">
+    <form class="popup" id="btn-request-tel" novalidate>
         <header class="popup__head">
             <h3 class="popup__title-head">Обратная связь (по телефону)</h3>
             <div class="popup__btn-close"></div>
@@ -150,7 +150,7 @@
             <button class="btn-request popup__btn popup__btn_mt" type="submit">Отправить</button>
         </div>
     </form>
-    <form class="popup" id="btn-request-email">
+    <form class="popup" id="btn-request-email" novalidate>
         <header class="popup__head">
             <h3 class="popup__title-head">Обратная связь (через почту)</h3>
             <div class="popup__btn-close"></div>
@@ -162,8 +162,8 @@
                 <label class="popup__input-label" for="popup-input-name">Ваше имя</label>
             </div>
             <div class="popup__input-wrapper">
-                <input class="popup__input" type="text" required id="popup-input-number">
-                <label class="popup__input-label" for="popup-input-number">Ваша почта</label>
+                <input class="popup__input" type="text" required id="popup-input-email">
+                <label class="popup__input-label" for="popup-input-email">Ваша почта</label>
             </div>
             <div class="popup__textarrea-wrapper">
                 <textarea class="popup__textarrea" required></textarea>
@@ -732,4 +732,5 @@
     <script src="script/formAppearAndHide.js"></script>
     <script src="script/closeAndOpenScroll.js"></script>
     <script src="script/radio.js"></script>
+    <script src="script/validationForm.js"></script>
 </body>
