Создание  и стилизация прогрессбара, изменение кнопки переключения частей формы

--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
         </div>
         <div class="popup__footer">
             <div class="popup__btn-wrapper">
-                <button class="btn-request popup__btn popup__btn-slide" type="button">Следующий шаг</button>
+                <button class="popup__btn popup__btn-slide" type="button"></button>
+            </div>
+            <div class="progress-ring-wrapper">
+                <svg class="progress-ring" width="70" height="70">
+                    <circle class="progress-ring__circle-border" stroke="rgb(102, 105, 114)" stroke-width="3" cx="35" cy="35" r="29" fill="transparent"/>
+                    <circle class="progress-ring__circle" stroke="rgb(242, 242, 242)" stroke-width="3" cx="35" cy="35" r="29" fill="transparent"/>
+                </svg>
+                <p class="progress-ring-wrapper__num">01</p>
             </div>
         </div>
     </form>
